--- a/risultati.html
+++ b/risultati.html
@@ -7,6 +7,7 @@
   <title>Risultati Ricerca - Drive&Joy</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-gray-50 text-gray-900 font-sans">
   <header class="bg-white shadow sticky top-0 z-50">
@@ -27,7 +28,7 @@
   
       <label class="block mb-2 text-sm">Tipologia</label>
       <select id="filter-tipologia" class="w-full mb-4 p-2 border rounded">
-        <option value="">Entrambi</option>
+        <option value="">Nuovo e Usato</option>
         <option value="nuovo">Solo Nuovo</option>
         <option value="usato">Solo Usato</option>
       </select>
